# py-punk

./: README.md  pyproject.toml
core/: screen.py
game_mods/py_punk_probe/: init.lua
notes/: raw_log_format.md  route_a_progress_001.md
ocv-playground/: .gitignore  lane-detect.py
src/py_punk/: enrich.py  ingest.py  paths.py  schemas.py  validate.py
telemetry/processed/: dummy_run_001.parquet  route_a_run_001.parquet  route_a_run_002.parquet  route_a_run_003.parquet  telemetry_probe.parquet
telemetry/raw/: dummy_run_001.csv  telemetry_probe.jsonl
telemetry/raw/route_a/: route_a_run_001.jsonl  route_a_run_002.jsonl  route_a_run_003.jsonl
tools/: compare_route_runs.py  deploy_probe.sh  enrich_processed.py  ingest_dummy_telemetry.py  inspect_processed.py  make_dummy_telemetry.py  plot_probe_trajectory.py  summarise_processed.py  validate_processed.py
