[project]
name = "py-punk"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_punk"]

[dependency-groups]
dev = [
    "ruff",
]
